--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node src/server.js",
-    "start-dev": "nodemon src/server.js"
+    "start-dev": "nodemon src/server.js",
+    "lint": "eslint ./"
   },
   "author": "mmulyana",
   "license": "ISC",
@@ -14,6 +15,9 @@
     "nanoid": "^3.3.7"
   },
   "devDependencies": {
+    "@eslint/js": "^9.2.0",
+    "eslint": "^9.2.0",
+    "globals": "^15.1.0",
     "nodemon": "^3.1.0"
   }
 }
